# ci-ansible-tripleo

./: .gitignore  README.md  ansible_env  deploy.sh  quickstart.sh  requirements.txt  setup.cfg
config/: liberty.yml  mitaka.yml  net-iso.yml
config/general_config/: 1cmpt_3ctrl_1ceph.yml  net-iso.yml
config/release/: master.yml  mitaka.yml
playbooks/: collect-logs.yml  gate.yml  tempest.yml  tripleo.yml  upgrade.yml
scripts/: get_gate_changes.py
