[metadata]
name = ci-ansible-tripleo
summary = ci-ansible-tripleo - A ansible role for deploying a tripleo overcloud
description-file =
    README.md
author = RDO-CI Team
author-email = mbultel@redhat.com, whayutin@redhat.com
home-page = https://github.com/redhat-openstack/ci-ansible-tripleo
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    config/ = config/*
    library/ = library/*
    playbooks/ = playbooks/*
    plugins/ = plugins/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
